--- a/index.html
+++ b/index.html
@@ -2,7 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="tHT0MC2YSB-y64raeWWa07ddIQdotxaBC3oz138Ruwc" />
+          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+   <meta name="description" content="Photovoltaik, Solar, Elektro, Wärmepumpe, Energie, Erneuerbare Energie, Solaranlagen, PV Anlagen, Strom - Ihre Experten für nachhaltige Energielösungen.">
+  <meta name="keywords" content="Photovoltaik, Solar, Elektro, Firma, Firmen, Wärmepumpe, Energie, Energy, Erneuerbare Energie, Solaranlagen, PV Anlagen, Strom">
+  <meta name="author" content="mfmelektro">
+  <meta property="og:title" content="Erneuerbare Energie & Photovoltaik Lösungen">
+  <meta property="og:description" content="Führender Anbieter für Photovoltaik, Wärmepumpen und erneuerbare Energielösungen.">
+  <meta property="og:url" content="https://mfmelektro.ch/">
+  <meta property="og:type" content="website">
+  <title> mfmelektro | Erneuerbare Energie & Photovoltaik | Your Company</title>
+
+
     <title>mfmelektro</title>
     <link rel="icon" type="image/svg+xml" href="logo.jpg" />
     <link
@@ -17,3 +29,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
